# racoon

./: .gitlab-ci.yml  Makefile  README.md  pyproject.toml  requirements.txt  tox.ini
racoon/: __init__.py  __main__.py
racoon/manifest/: __init__.py  manifest.py  status.py
racoon/manifest/test/: test_manifest.py
tools/: generate-release-markdown.sh
